# source-coop-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  please-release.yaml  release-please.yaml  release.yml
src/: cache.rs  main.rs  oidc.rs  output.rs  sts.rs
