[package]
name = "source-coop-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI for Source Cooperative — OIDC login and STS credential exchange"
repository = "https://github.com/source-cooperative/source-coop-cli"

[[bin]]
name = "source-coop"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
rand = "0.8"
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
keyring = "3"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[features]
default = ["production"]
production = []
staging = []

# cargo-dist config
[profile.dist]
inherits = "release"
lto = "thin"
